--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
+    "date-fns": "^2.29.3",
     "gatsby": "^5.3.3",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-gtag": "^5.3.0",
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-manifest": "^5.3.1",
+    "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-sitemap": "^6.3.1",
     "gatsby-plugin-styled-components": "^6.3.0",
     "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-json": "^5.3.0",
     "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.3.1",
     "react": "^18.2.0",
