--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-transformer-sharp": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll-parallax": "^3.3.2",
     "react-spring-scroll-to-hook": "^1.0.3",
     "styled-components": "^5.3.6"
   },
